--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "build": "rollup h-tab.mjs -f iife -o bundle.js -p @rollup/plugin-node-resolve"
+  },
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "codemirror": "^6.0.1",
     "rollup": "^4.17.2"
   }
 }
