--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "codemirror": "^6.0.1",
-    "rollup": "^4.17.2"
+    "jzz": "^1.8.4",
+    "jzz-input-kbd": "^1.3.1",
+    "rollup": "^4.18.0"
   }
 }
