--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "codemirror": "^6.0.1",
     "jzz": "^1.8.4",
     "jzz-input-kbd": "^1.3.1",
+    "jzz-synth-tiny": "^1.4.0",
     "rollup": "^4.18.0"
   }
 }
